syntax = "proto3";

import "google/api/annotations.proto";
import "model/model.proto";

option go_package = "github.com/duc-cnzj/mars/client/namespace;namespace";

message NamespaceCreateRequest {
  string namespace = 1;
}

message NamespaceShowRequest {
  int64 namespace_id = 1;
}

message NamespaceDeleteRequest {
  int64 namespace_id = 1;
}

message NamespaceIsExistsRequest {
  string name = 1;
}

message NamespaceCpuMemoryRequest {
  int64 namespace_id = 1;
}

message NamespaceServiceEndpointsRequest {
  int64 namespace_id = 1;
  string project_name = 2;
}

message NamespaceSimpleProject {
  int64 id = 1;
  string name = 2;
  string status = 3;
}
message NamespaceItem {
  int64 id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;

  repeated NamespaceSimpleProject projects = 5;
}
message NamespaceAllResponse {
  repeated NamespaceItem data = 1;
}

message NamespaceCreateResponse {
  int64 id = 1;
  string name = 2;
  repeated string image_pull_secrets = 3;
  string created_at = 4;
  string updated_at = 5;
}

message NamespaceShowResponse {
  int64 id = 1;
  string name = 2;
  repeated string image_pull_secrets = 3;
  string created_at = 4;
  string updated_at = 5;
  repeated ProjectModel projects = 6;
}

message NamespaceCpuMemoryResponse {
  string cpu = 1;
  string memory = 2;
}

message NamespaceServiceEndpointsResponse {
  message item {
    string name = 1;
    repeated string url = 2;
  }

  repeated item data = 1;
}

message NamespaceIsExistsResponse {
  bool exists = 1;
  int64 id = 2;
}
message NamespaceAllRequest {}
message NamespaceDeleteResponse {}

service Namespace {
  rpc All(NamespaceAllRequest) returns (NamespaceAllResponse) {
    option (google.api.http) = {
      get: "/api/namespaces"
    };
  }

  rpc Create(NamespaceCreateRequest) returns (NamespaceCreateResponse) {
    option (google.api.http) = {
      post: "/api/namespaces",
      body: "*"
    };
  }

  rpc Show(NamespaceShowRequest) returns (NamespaceShowResponse) {
    option (google.api.http) = {
      get: "/api/namespaces/{namespace_id}"
    };
  }

  rpc Delete(NamespaceDeleteRequest) returns (NamespaceDeleteResponse) {
    option (google.api.http) = {
      delete: "/api/namespaces/{namespace_id}"
    };
  }

  rpc IsExists(NamespaceIsExistsRequest) returns (NamespaceIsExistsResponse) {
    option (google.api.http) = {
      post: "/api/namespaces/exists"
    };
  }

  rpc CpuMemory(NamespaceCpuMemoryRequest) returns (NamespaceCpuMemoryResponse) {
    option (google.api.http) = {
      get: "/api/namespaces/{namespace_id}/cpu_memory"
    };
  }

  rpc ServiceEndpoints(NamespaceServiceEndpointsRequest) returns (NamespaceServiceEndpointsResponse) {
    option (google.api.http) = {
      get: "/api/namespaces/{namespace_id}/service_endpoints"
    };
  }
}